# issue_manager

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_db.db
alembic/: env.py
alembic/versions/: 33b02779d142_.py  48309d05b470_.py  6886e7febb2f_.py  86cebedb8e41_.py  cf49f79dcf43_.py  d5d869cec219_.py
issue_manager/: main.py
issue_manager/database/: db.py  enums.py
issue_manager/models/: task.py
issue_manager/schemas/: task.py
src/: main.py
src/api/: routers.py  validators.py
src/api/v1/endpoints/: __init__.py  task.py
src/core/: config.py
src/crud/: base.py  task.py
src/database/: db.py  enums.py
src/models/: __init__.py  base.py  task.py
src/schemas/: task.py
tests/: conftest.py  test_task.py
